2010-08-29  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Pass excludedIndexes when getting metadata piece.
	* src/UTMetadataRequestFactory.cc
	* test/UTMetadataRequestFactoryTest.cc

2010-08-29  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added a sets of overloaded functions for
	PieceStorage::getMissingPiece() and getMissingFastPiece() to get
	multiple pieces more efficiently.
	* src/DefaultBtInteractive.cc
	* src/DefaultPieceStorage.cc
	* src/DefaultPieceStorage.h
	* src/PieceStorage.h
	* src/UnknownLengthPieceStorage.cc
	* src/UnknownLengthPieceStorage.h
	* test/DefaultPieceStorageTest.cc
	* test/MockPieceStorage.h

2010-08-28  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Changed signature of util::executeHook().
	* src/RequestGroupMan.cc
	* src/util.cc
	* src/util.h

2010-08-28  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Wait data arrives at clientSocket_ in
	FtpConnectionTest::testReceiveEpsvResponse().
	* test/FtpConnectionTest.cc

2010-08-27  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added bt-tracker and bt-exclude-tracker to -i list option.
	* doc/aria2c.1.txt
	* doc/xmlrpc/aria2rpc
	* src/download_helper.cc

2010-08-27  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Don't listen on IPv6 socket for BitTorrent, DHT, XML-RPC if
	--disable-ipv6 is true.
	* src/BtSetup.cc
	* src/DownloadEngineFactory.cc
	* src/RequestGroup.cc

2010-08-27  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed unused debug log.
	* src/DefaultBtInteractive.cc

2010-08-26  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Enter end game mode as soon as all pieces are assigned to peer to
	avoid substantial slow down at the very last stage of download.
	* src/DefaultBtInteractive.cc
	* src/DefaultPieceStorage.cc
	* src/DefaultPieceStorage.h
	* src/PieceStorage.h
	* src/UnknownLengthPieceStorage.h
	* test/MockPieceStorage.h
