@@ -124,17 +124,11 @@ public:
   virtual void getMissingPiece
   (std::vector<SharedHandle<Piece> >& pieces,
    size_t minMissingBlocks,
-   const SharedHandle<Peer>& peer,
-   const std::vector<size_t>& excludedIndexes);
+   const SharedHandle<Peer>& peer);
 
   virtual void getMissingPiece
   (std::vector<SharedHandle<Piece> >& pieces,
    size_t minMissingBlocks,
-   const SharedHandle<Peer>& peer);
-
-  virtual void getMissingFastPiece
-  (std::vector<SharedHandle<Piece> >& pieces,
-   size_t minMissingBlocks,
    const SharedHandle<Peer>& peer,
    const std::vector<size_t>& excludedIndexes);
 
@@ -143,15 +137,21 @@ public:
    size_t minMissingBlocks,
    const SharedHandle<Peer>& peer);
 
+  virtual void getMissingFastPiece
+  (std::vector<SharedHandle<Piece> >& pieces,
+   size_t minMissingBlocks,
+   const SharedHandle<Peer>& peer,
+   const std::vector<size_t>& excludedIndexes);
+
   virtual SharedHandle<Piece> getMissingPiece(const SharedHandle<Peer>& peer);
 
-  virtual SharedHandle<Piece> getMissingFastPiece
-  (const SharedHandle<Peer>& peer);
-
-  virtual SharedHandle<Piece> getMissingPiece
+  virtual  SharedHandle<Piece> getMissingPiece
   (const SharedHandle<Peer>& peer, const std::vector<size_t>& excludedIndexes);
 
-  virtual SharedHandle<Piece> getMissingFastPiece
+  SharedHandle<Piece> getMissingFastPiece
+  (const SharedHandle<Peer>& peer);
+
+  SharedHandle<Piece> getMissingFastPiece
   (const SharedHandle<Peer>& peer, const std::vector<size_t>& excludedIndexes);
 
 #endif // ENABLE_BITTORRENT
